--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
   },
 
   "dependencies": {
-    "sequelize": "~2.0.0-alpha2",
-    "pg": "~2.3.1",
-    "ejs": "~0.8.4",
-    "express": "~3.3.4",
-    "async": "~0.2.9"
+    "sequelize": "~4.23.2",
+    "pg": "~7.4.0",
+    "ejs": "~2.5.7",
+    "express": "~4.16.2",
+    "async": "~2.6.0"
   },
 
   "engines": {
-    "node": "0.10.12",
-    "npm": "1.2.30"
+    "node": "9.2.0",
+    "npm": "5.5.1"
   }
 }
